controller/test/e2e/testdata/jwtauth/invalid-inline.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-invalid-jwks
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "invalidjwksroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-invalid-inline-jwks-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-invalid-jwks
  traffic:
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://agentgateway.dev
        jwks:
          inline: '{"keys":[{"e":"AQAB","kid":"3161","kty":"RSB","n":"tmzcODUF5T9p"}]}'
