controller/test/e2e/testdata/jwtauth/secured-gateway-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-gw
  namespace: agentgateway-base
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "securegateways.com"
  rules:
  - backendRefs:
    - name: backend
      port: 80
---
# jwks were generated using hack/utils/jwt/jwt-generator.go
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: gw-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  traffic:
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://agentgateway.dev
        jwks:
          inline: '{"keys":[{"use":"sig","kty":"RSA","kid":"5358488414679311644","n":"xOtSpSW311osnQB1ydXToC2s8AUJSF2RreFKKM6ipnLfX8ospAtFv4EBG9tqHoSMxIlWgnAcvcWW08AmjXOsHadGM-GRTGLhT10mBQ1xvhKifuDyL0Mw04sGCGCSWaJFKLdcUau8OYwzfvO30y1dk4hRQAUVttYF4arXc1pRuUKK4nHPy5MSDSsRk81vXjSzOByaWR0HVIfomzFEWf1hAflCzmzOQmQt80vM7ZMC7aYBT6XZUAXIb5EQsOtLcOGGKSg4KUMEjB8DZt6O0fEZFPdBTo9KKm6hxLY643uE_2QdaIg8lp1Ccztw6FtO4kIXDLG6ufXfCXERhqsaq8Svvw","e":"AQAB","x5c":["MIIC5jCCAc6gAwIBAgIBSDANBgkqhkiG9w0BAQsFADAbMRkwFwY [...]
      - issuer: https://agentgateway.dev
        jwks:
          inline: '{"keys":[{"use":"sig","kty":"RSA","kid":"1170864541832970789","n":"unQIKIJA230fUi1vNL1VHofJ0ZNe35KraLyw99G7f5m6H267NeMybwCFdoPgVfLEnJHxn5OoRcknw3OUgNmukzsh5CBRYf6TviaUR4LH6U9w2XZrhGYYbOvfgUtiqa1zRgTdPlBM5TaUazDtWxQrU0Yq3PoiZo50sNrtQ0a50NXwMBQVnz6Pn4DcvQgYgw6AzG756wcuNQgi2YxqIDArOx2tLQvFmpZefzlrmzvFjlnkd041su4Pj-JdjJXYlUvP-UEAlXZQreTBr0WwyPQcppB0ZBfZZIk2rKLlh7VB6grcY8JF7mU5WGUSXFtsuVra3eP1i89mVm1JbkLcq93UyQ","e":"AQAB","x5c":["MIIC5jCCAc6gAwIBAgIBDjANBgkqhkiG9w0BAQsFADAbMRkwFwY [...]
